--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,9 +9,11 @@ server.servlet.session.timeout=30m
 
 # MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/goottflix
+spring.datasource.url=jdbc:mysql://${DB_AWS_ENDPOINT}/goottflix?createDatabaseIfNotExist=true&characterEncoding=UTF-8&characterSetResults=UTF-8
+#spring.datasource.url=jdbc:mysql://localhost:3306/goottflix
 spring.datasource.username=${DB_USER_NAME}
 spring.datasource.password=${DB_SECRET}
+
 
 
 # MyBatis ??
