--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -64,8 +64,9 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
-          envs: GITHUB_SHA
+          envs: GITHUB_SHA, ENV_FILE
           script: |
+            echo "${{ secrets.ENV_FILE }}" > /home/ubuntu/.env
             sudo docker ps -qa | xargs -r sudo docker rm -f
             sudo docker pull ${{ secrets.DOCKER_REPO }}:latest
             sudo docker run -d -p 8080:8080 \
