--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -74,6 +74,7 @@ jobs:
             sudo docker pull ${{ secrets.DOCKER_REPO }}:latest
             sudo docker run -d -p 8080:8080 \
             -e SPRING_PROFILES_ACTIVE=prod \
-            --env-file \home\ubuntu\.env \
+            --env-file /home/ubuntu/.env \
             ${{ secrets.DOCKER_REPO }}:latest
             sudo docker image prune -f
+            sudo docker ps -a
