--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,6 +9,8 @@ spring.datasource.time-zone=Asia/Seoul
 # ?? ?? ??? api ????? ?????? ??
 server.port=8080
 server.servlet.session.timeout=30m
+server.servlet.context-path=/api
+
 
 # MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
