--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,6 +10,9 @@ spring.datasource.time-zone=Asia/Seoul
 server.port=8080
 server.servlet.session.timeout=30m
 
+# ?? ???
+file.upload-dir=/uploads
+
 
 # MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
